--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-    <h1>This is actually my personal website!</h1>
+    <h1>This page is ready for future development as my personal website</h1>
   </body>
 </html>
